--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
+.main-container {
+  height: 100vh;
+  background-color: #eef5ff;
+  scroll-behavior: smooth;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* .main-color {
   color: red;
 }
