--- a/src/index.css
+++ b/src/index.css
@@ -1,113 +1,34 @@
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.font-cursive{
-  font-family: 'Caveat', cursive;
+.font-cursive {
+  font-family: "Caveat", cursive;
 }
-.font-montserrat{
-  font-family: 'Montserrat', sans-serif;
+.font-montserrat {
+  font-family: "Montserrat", sans-serif;
 }
-.font-poppins{
-  font-family: 'Poppins', sans-serif;
+.font-poppins {
+  font-family: "Poppins", sans-serif;
 }
 .fw-500 {
   font-weight: 500;
 }
 
-.cursor_pointer{
+.cursor_pointer {
   cursor: pointer;
 }
-.cursor_none{
+.cursor_none {
   cursor: none;
 }
 .overflow-hidden {
   overflow: hidden;
 }
-
-/* <div class="card">
-  <div class="card-image"></div>
-  <p class="card-title">Card title</p>
-  <p class="card-body">
-    Nullam ac tristique nulla, at convallis quam. Integer consectetur mi nec magna tristique, non lobortis.
-  </p>
-  <p class="footer">Written by <span class="by-name">John Doe</span> on <span class="date">25/05/23</span></p>
-</div> */
-
-/* 
-.card {
-  padding: 20px;
-  width: 330px;
-  min-height: 370px;
-  border-radius: 20px;
-  background: #e8e8e8;
-  box-shadow: 5px 5px 6px #dadada,
-               -5px -5px 6px #f6f6f6;
-  transition: 0.4s;
-}
-
-.card:hover {
-  translate: 0 -10px;
-}
-
-.card-title {
-  font-size: 18px;
-  font-weight: 600;
-  color: #2e54a7;
-  margin: 15px 0 0 10px;
-}
-
-.card-image {
-  min-height: 170px;
-  background-color: #c9c9c9;
-  border-radius: 15px;
-  box-shadow: inset 8px 8px 10px #c3c3c3,
-            inset -8px -8px 10px #cfcfcf;
-}
-
-.card-body {
-  margin: 13px 0 0 10px;
-  color: rgb(31, 31, 31);
-  font-size: 15px;
-}
-
-.footer {
-  float: right;
-  margin: 28px 0 0 18px;
-  font-size: 13px;
-  color: #636363;
-}
-
-.by-name {
-  font-weight: 700;
-} */
-
-
-
-
-
-
-/* .card .container-image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #e7e7e7;
-  width: 190px;
-  height: 190px;
-  cursor: pointer;
-  border: none;
-  border-radius: 50%;
-  box-shadow: 0 0 3px 1px #1818183d, 2px 2px 3px #18181865, inset 2px 2px 2px #ffffff;
-  transition: all .3s ease-in-out, opacity .3s;
-  transition-delay: .6s, 0s;
-} */
-
